[package]
name = "cumulus-bridge-core"
version = "0.1.0"
authors = ["Matrix-Magiq Team"]
edition = "2021"
description = "Core components for bridging Matrix-Magiq to external blockchains"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }

# Substrate dependencies
frame-support = { path = "../../substrate/frame/support", default-features = false }
frame-system = { path = "../../substrate/frame/system", default-features = false }
sp-core = { path = "../../substrate/primitives/core", default-features = false }
sp-runtime = { path = "../../substrate/primitives/runtime", default-features = false }
sp-std = { path = "../../substrate/primitives/std", default-features = false }

# Quantum security
blake3 = { version = "1.3.3", default-features = false }
pqc_kyber = { version = "0.7.1", default-features = false }
pqc_dilithium = { version = "0.2.0", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "log/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "blake3/std",
]
