[package]
name = "polkadot-core-primitives"
version = "7.0.0"
description = "Core Polkadot types used by Relay Chains and parachains."
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
edition = "2021"
license.workspace = true
homepage = "https://github.com/Skhi-Bridges/polkadot-sdk"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
]

