[package]
name = "polkadot-erasure-coding"
version = "7.0.0"
description = "Erasure coding used for Polkadot's availability system"
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
edition = "2021"
license.workspace = true
homepage = "https://github.com/Skhi-Bridges/polkadot-sdk"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"

[lints]
workspace = true

[dependencies]
codec = { features = ["derive", "std"], workspace = true }
novelpoly = { workspace = true }
polkadot-node-primitives = { workspace = true, default-features = true }
polkadot-primitives = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-trie = { workspace = true, default-features = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { features = ["cargo_bench_support"], workspace = true }
quickcheck = { workspace = true }

[[bench]]
name = "scaling_with_validators"
harness = false

