[package]
name = "polkadot-statement-table"
version = "7.0.0"
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
edition = "2021"
license.workspace = true
description = "Stores messages other authorities issue about candidates in Polkadot."
homepage = "https://github.com/Skhi-Bridges/polkadot-sdk"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
gum = { workspace = true, default-features = true }
polkadot-primitives = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }

