[package]
name = "parachain-template"
description = "A parachain-template helper crate to keep documentation in sync with the template's components."
version = "0.0.0"
license = "Unlicense"
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
homepage = "https://github.com/Skhi-Bridges/polkadot-sdk"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"
edition = "2021"
publish = false

[dependencies]
docify = "0.2.9"

[features]
generate-readme = []

