[package]
name = "template-zombienet-tests"
description = "Zombienet test for templates."
version = "0.0.0"
license = "Unlicense"
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
homepage = "https://github.com/Skhi-Bridges/polkadot-sdk"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
zombienet-sdk = { workspace = true }

[features]
zombienet = []

