[package]
name = "bp-bridge-hub-cumulus"
description = "Primitives for BridgeHub parachain runtimes."
version = "0.7.0"
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"

[package.metadata.polkadot-sdk]
exclude-from-umbrella = true

[lints]
workspace = true

[dependencies]
# Bridge Dependencies

bp-messages = { workspace = true }
bp-polkadot-core = { workspace = true }
bp-runtime = { workspace = true }

# Substrate Based Dependencies

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-api = { workspace = true }
sp-std = { workspace = true }

# Polkadot Dependencies
polkadot-primitives = { workspace = true }

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"polkadot-primitives/std",
	"sp-api/std",
	"sp-std/std",
]

