[package]
name = "bp-bridge-hub-westend"
description = "Primitives of BridgeHubWestend parachain runtime."
version = "0.3.0"
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"

[package.metadata.polkadot-sdk]
exclude-from-umbrella = true

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }

# Bridge Dependencies
bp-bridge-hub-cumulus = { workspace = true }
bp-messages = { workspace = true }
bp-runtime = { workspace = true }
bp-xcm-bridge-hub = { workspace = true }

# Substrate Based Dependencies
frame-support = { workspace = true }
sp-api = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"bp-bridge-hub-cumulus/std",
	"bp-messages/std",
	"bp-runtime/std",
	"bp-xcm-bridge-hub/std",
	"codec/std",
	"frame-support/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
]

