[package]
name = "bp-polkadot-bulletin"
description = "Primitives of Polkadot Bulletin chain runtime."
version = "0.4.0"
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"

[package.metadata.polkadot-sdk]
exclude-from-umbrella = true

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }

# Bridge Dependencies

bp-header-chain = { workspace = true }
bp-messages = { workspace = true }
bp-polkadot-core = { workspace = true }
bp-runtime = { workspace = true }

# Substrate Based Dependencies

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-api = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"bp-header-chain/std",
	"bp-messages/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
]

