[package]
name = "bp-parachains"
description = "Primitives of parachains module."
version = "0.7.0"
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
impl-trait-for-tuples = { workspace = true }
scale-info = { features = ["derive"], workspace = true }

# Bridge dependencies

bp-header-chain = { workspace = true }
bp-polkadot-core = { workspace = true }
bp-runtime = { workspace = true }

# Substrate dependencies

frame-support = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
	"bp-header-chain/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	"codec/std",
	"frame-support/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]

