[package]
name = "bp-polkadot-core"
description = "Primitives of Polkadot-like runtime."
version = "0.7.0"
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
serde = { optional = true, features = [
	"derive",
], workspace = true, default-features = true }

# Bridge Dependencies

bp-messages = { workspace = true }
bp-runtime = { workspace = true }

# Substrate Based Dependencies

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
hex = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-runtime/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]

