[package]
name = "bp-xcm-bridge-hub-router"
description = "Primitives of the xcm-bridge-hub fee pallet."
version = "0.6.0"
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"

[lints]
workspace = true

[dependencies]
codec = { features = ["bit-vec", "derive"], workspace = true }
scale-info = { features = ["bit-vec", "derive"], workspace = true }

# Substrate Dependencies
sp-core = { workspace = true }
sp-runtime = { workspace = true }

# Polkadot Dependencies
xcm = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"xcm/std",
]

