[package]
name = "equivocation-detector"
version = "0.1.0"
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"
description = "Equivocation detector"
publish = false

[lints]
workspace = true

[dependencies]
async-std = { features = ["attributes"], workspace = true }
async-trait = { workspace = true }
bp-header-chain = { workspace = true, default-features = true }
finality-relay = { workspace = true }
frame-support = { workspace = true, default-features = true }
futures = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true, default-features = true }
relay-utils = { workspace = true }

