[package]
name = "parachains-relay"
version = "0.1.0"
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"
publish = false

[lints]
workspace = true

[dependencies]
async-std = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
relay-utils = { workspace = true }

# Bridge dependencies

bp-polkadot-core = { workspace = true, default-features = true }
relay-substrate-client = { workspace = true }

[dev-dependencies]
codec = { workspace = true, default-features = true }
relay-substrate-client = { features = ["test-helpers"], workspace = true }
sp-core = { workspace = true, default-features = true }

