[package]
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
name = "cumulus-relay-chain-interface"
version = "0.7.0"
edition = "2021"
description = "Common interface for different relay chain datasources."
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://github.com/Skhi-Bridges/polkadot-sdk"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"

[lints]
workspace = true

[dependencies]
polkadot-overseer = { workspace = true, default-features = true }

cumulus-primitives-core = { workspace = true, default-features = true }

sc-client-api = { workspace = true, default-features = true }
sp-api = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-state-machine = { workspace = true, default-features = true }
sp-version = { workspace = true }

async-trait = { workspace = true }
codec = { workspace = true, default-features = true }
futures = { workspace = true }
jsonrpsee-core = { workspace = true }
thiserror = { workspace = true }

