[package]
name = "pallet-quantum-xcmp"
version = "0.1.0"
authors = ["Matrix-Magiq Team"]
edition = "2021"
description = "Quantum-secure cross-chain message passing for Cumulus parachains"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }

# Substrate dependencies
frame-benchmarking = { path = "../../../substrate/frame/benchmarking", default-features = false, optional = true }
frame-support = { path = "../../../substrate/frame/support", default-features = false }
frame-system = { path = "../../../substrate/frame/system", default-features = false }
sp-core = { path = "../../../substrate/primitives/core", default-features = false }
sp-io = { path = "../../../substrate/primitives/io", default-features = false }
sp-runtime = { path = "../../../substrate/primitives/runtime", default-features = false }
sp-std = { path = "../../../substrate/primitives/std", default-features = false }

# Cumulus dependencies
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }
cumulus-primitives-quantum-channel = { path = "../../primitives/quantum-channel", default-features = false }
cumulus-pallet-parachain-system = { path = "../parachain-system", default-features = false }

# Quantum dependencies from Matrix-Magiq
pqc_kyber = { version = "0.7.1", default-features = false }
pqc_dilithium = { version = "0.2.0", default-features = false }
blake3 = { version = "1.3.3", default-features = false }

[dev-dependencies]
sp-core = { path = "../../../substrate/primitives/core", default-features = false }
sp-io = { path = "../../../substrate/primitives/io", default-features = false }
sp-runtime = { path = "../../../substrate/primitives/runtime", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "log/std",
    "scale-info/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-quantum-channel/std",
    "cumulus-pallet-parachain-system/std",
    "blake3/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
