[package]
name = "cumulus-pallet-solo-to-para"
version = "0.7.0"
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Adds functionality to migrate from a Solo to a Parachain"
license = "Apache-2.0"
homepage = "https://github.com/Skhi-Bridges/polkadot-sdk"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-sudo = { workspace = true }
sp-runtime = { workspace = true }

# Polkadot
polkadot-primitives = { workspace = true }

# Cumulus
cumulus-pallet-parachain-system = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"cumulus-pallet-parachain-system/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-sudo/std",
	"polkadot-primitives/std",
	"scale-info/std",
	"sp-runtime/std",
]
try-runtime = [
	"cumulus-pallet-parachain-system/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-sudo/try-runtime",
	"sp-runtime/try-runtime",
]

