[package]
name = "cumulus-primitives-aura"
version = "0.7.0"
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
description = "Core primitives for Aura in Cumulus"
homepage = "https://github.com/Skhi-Bridges/polkadot-sdk"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"

[lints]
workspace = true

[dependencies]

# Substrate
sp-api = { workspace = true }
sp-consensus-aura = { workspace = true }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"sp-consensus-aura/std",
]

