[package]
name = "cumulus-primitives-proof-size-hostfunction"
version = "0.2.0"
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Hostfunction exposing storage proof size to the runtime."
license = "Apache-2.0"
homepage = "https://github.com/Skhi-Bridges/polkadot-sdk"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"

[lints]
workspace = true

[dependencies]
sp-externalities = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-trie = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-state-machine = { workspace = true, default-features = true }

[features]
default = ["std"]
std = ["sp-externalities/std", "sp-runtime-interface/std", "sp-trie/std"]

