[package]
name = "cumulus-primitives-storage-weight-reclaim"
version = "1.0.0"
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Utilities to reclaim storage weight."
license = "Apache-2.0"
homepage = "https://github.com/Skhi-Bridges/polkadot-sdk"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
log = { workspace = true }
scale-info = { features = ["derive"], workspace = true }

frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

sp-runtime = { workspace = true }

cumulus-primitives-core = { workspace = true }
cumulus-primitives-proof-size-hostfunction = { workspace = true }
docify = { workspace = true }

[dev-dependencies]
cumulus-test-runtime = { workspace = true }
sp-io = { workspace = true }
sp-trie = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-proof-size-hostfunction/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-trie/std",
]

