[package]
name = "cumulus-primitives-timestamp"
version = "0.7.0"
authors = ["Matrix-Magiq Team", "Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Provides timestamp related functionality for parachains."
license = "Apache-2.0"
homepage = "https://github.com/Skhi-Bridges/polkadot-sdk"
repository = "https://github.com/Skhi-Bridges/polkadot-sdk"

[lints]
workspace = true

[dependencies]
# Substrate
sp-inherents = { workspace = true }
sp-timestamp = { workspace = true }

# Cumulus
cumulus-primitives-core = { workspace = true }

[features]
default = ["std"]
std = [
	"cumulus-primitives-core/std",
	"sp-inherents/std",
	"sp-timestamp/std",
]

